Lid_driven_cavity_analytic/high/jitfailure-dolfin_expression_1b2aac74cd4f2d0fbc1b431718677599/error.log
/tmp/tmpb2iad9bs/dolfin_expression_1b2aac74cd4f2d0fbc1b431718677599.cpp: In member function ‘virtual void dolfin::dolfin_expression_1b2aac74cd4f2d0fbc1b431718677599::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpb2iad9bs/dolfin_expression_1b2aac74cd4f2d0fbc1b431718677599.cpp:64:41: error: invalid type argument of unary ‘*’ (have ‘double’)
           values[0] = (Re)*8.0*((x[0])**4.0-2.0*(x[0])**3.0+(x[0])**2.0);
                                         ^~~
/tmp/tmpb2iad9bs/dolfin_expression_1b2aac74cd4f2d0fbc1b431718677599.cpp:64:57: error: invalid type argument of unary ‘*’ (have ‘double’)
           values[0] = (Re)*8.0*((x[0])**4.0-2.0*(x[0])**3.0+(x[0])**2.0);
                                                         ^~~
/tmp/tmpb2iad9bs/dolfin_expression_1b2aac74cd4f2d0fbc1b431718677599.cpp:64:69: error: invalid type argument of unary ‘*’ (have ‘double’)
           values[0] = (Re)*8.0*((x[0])**4.0-2.0*(x[0])**3.0+(x[0])**2.0);
                                                                     ^~~
